# AgentScope

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .env.example  Dockerfile  alembic.ini  demo_boot.py  requirements-dev.txt  requirements.txt  run.py  seed.py  seed_agents.py  seed_demo.py  start.sh
docs/: README.md  ci-cd.md  deployment.md  docker.md  faq.md  getting-started.md  installation.md  migration.md  outreach.md  performance.md  quickstart.md  release-notes.md  troubleshooting.md
examples/: 01_quickstart_trace.py  02_agent_tool_workflow.py  03_http_export.py  04_rest_ingest_trace.py  05_replay_evaluate.py  06_workflow_engine.py  07_custom_plugin.py  (+4 more)
sdk/: .gitignore  README.md  pyproject.toml
sdk/agentscope/: __init__.py  __main__.py  agent.py  api.py  config.py  errors.py  instrument.py  redaction.py  span.py  tool.py  tracer.py  workflow.py
sdk/agentscope/cli/: __init__.py  __main__.py  client.py  commands.py  console.py  main.py  parser.py  settings.py
sdk/agentscope/exporters/: __init__.py  base.py  console.py  http.py  logging.py  memory.py
sdk/agentscope/integrations/: __init__.py  _common.py  langchain.py  llamaindex.py
sdk/tests/: conftest.py  test_agent_workflow_tool.py  test_cli.py  test_config.py  test_exporters.py  test_instrument_anthropic.py  test_instrument_gemini.py  test_instrument_openai.py  test_integration_langchain.py  test_integration_llamaindex.py  test_redaction.py  test_tracing.py
(+334 files in other folders)
